# Lima-camera-merlin

./: .gitignore  CMakeLists.txt  README.md  pom.xml  pom_64.xml
doc/: Doxyfile  index.rst
include/: MerlinCamera.h  MerlinInterface.h  MerlinNet.h
python/: __init__.py
sip/: MerlinCamera.sip  MerlinInterface.sip
src/: Makefile  MerlinCamera.cpp  MerlinDetInfoCtrlObj.cpp  MerlinInterface.cpp  MerlinNet.cpp  MerlinSyncCtrlObj.cpp
test/: CMakeLists.txt  Makefile  MerlinTest.cpp  MerlinTest2.cpp  MerlinTest3.cpp  MerlinTest4.cpp  MerlinTest5.cpp  merlintest.py  merlintest2.py  merlintest3.py  merlintest4  merlintest4.py  merlintest5.py  sol_test_merlin.py  test_Merlin_1.cpp  test_Merlin_2.cpp  test_Merlin_3.cpp
